--- a/index.html
+++ b/index.html
@@ -201,19 +201,19 @@
         <section id="news">
             <h2>News</h2>
             <div class="news-item">
-                <p><strong>June 2025:</strong> Our paper "It's not a representation of me": Examining Accent Bias and Digital Exclusion in Synthetic AI Voice Services was accepted at ACM FAccT 2025</p>
+                <p><strong>June 2025:</strong> Our paper <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/AccentBias.pdf" target="_blank">"It's not a representation of me": Examining Accent Bias and Digital Exclusion in Synthetic AI Voice Services</a> was accepted at ACM FAccT 2025</p>
             </div>
             <div class="news-item">
-                <p><strong>April 2025:</strong> Our paper Promises, Promises: Understanding Claims Made in Social Robot Consumer Experiences was accepted at CHI 2025</p>
+                <p><strong>April 2025:</strong> Our paper <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/SocialRobotClaims.pdf" target="_blank"> Promises, Promises: Understanding Claims Made in Social Robot Consumer Experiences</a> was accepted at CHI 2025</p>
             </div>
             <div class="news-item">
-                <p><strong>May 2024:</strong> Presented Investigating the Datafication of Your Car at IEEE Security 8th Workshop on Technology and Consumer Protection (ConPro '24)</p>
+                <p><strong>May 2024:</strong> Presented <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/gillespie-conpro24.pdf" target="_blank">Investigating the Datafication of Your Car</a> at IEEE Security 8th Workshop on Technology and Consumer Protection (ConPro '24)</p>
             </div>
             <div class="news-item">
-                <p><strong>September 2023:</strong> Began my PhD with the Khoury Distinguished Fellowship</p>
+                <p><strong>September 2023:</strong> Began my PhD in Computer Science at Northeastern University with the Khoury Distinguished Fellowship</p>
             </div>
             <div class="news-item">
-                <p><strong>Conference Attendance:</strong> <a href="https://petsymposium.org/cfp25.php" target="_blank">PETS 2025</a>, <a href="https://computersciencelaw.org/2024-2/" target="_blank">CS Law 2024</a></p>
+                <p><strong>Conference Attendance:</strong> <a href="https://petsymposium.org/cfp25.php" target="_blank">PETS 2025</a>, <a href="https://chi2025.acm.org" target="_blank">ACM CHI 2025</a>, <a href="https://computersciencelaw.org/2024-2/" target="_blank">CS Law 2024</a>, <a href="https://sp2024.ieee-security.org" target="_blank">IEEE S&P 2024</a> </p>
             </div>
         </section>
 
