--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
         <section id="news">
             <h2>News</h2>
             <div class="news-item">
+                <p><strong>October 2025:</strong> I'm recruiting an undergraduate or graduate student to collaborate on Project “Robots”: AI Social Robots. Apply through the <a href="https://moniotrlab.khoury.northeastern.edu/students-projects/" target="_blank">Mon(IoT)r research group</a> process.</p>
+            </div>
+            <div class="news-item">
                 <p><strong>June 2025:</strong> Our paper <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/AccentBias.pdf" target="_blank">"It's not a representation of me": Examining Accent Bias and Digital Exclusion in Synthetic AI Voice Services</a> was accepted at ACM FAccT 2025</p>
             </div>
             <div class="news-item">
