--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
                     <a href="https://scholar.google.com/citations?hl=en&user=A_MZ0GUAAAAJ" target="_blank">Google Scholar</a>
                     <a href="https://www.linkedin.com/in/sarahg4567/" target="_blank">LinkedIn</a>
                     <a href="https://www.khoury.northeastern.edu/people/sarah-elizabeth-gillespie/" target="_blank">Khoury Profile</a>
+                    <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/SarahElizabethGillespie_academicCV.pdf">Curriculum Vitae</a>
                     <a href="mailto:gillespie.s@northeastern.edu">Contact</a>
+                    
                 </div>
             </div>
         </div>
