--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <a href="https://scholar.google.com/citations?hl=en&user=A_MZ0GUAAAAJ" target="_blank">Google Scholar</a>
                     <a href="https://www.linkedin.com/in/sarahg4567/" target="_blank">LinkedIn</a>
                     <a href="https://www.khoury.northeastern.edu/people/sarah-elizabeth-gillespie/" target="_blank">Khoury Profile</a>
-                    <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/SarahElizabethGillespie_academicCV.pdf">Curriculum Vitae</a>
+                    <a href="https://sarahgillespie.github.io/SarahElizabethGillespie_academicCV.pdf">Curriculum Vitae</a>
                     <a href="mailto:gillespie.s@northeastern.edu">Contact</a>
                     
                 </div>
@@ -206,13 +206,13 @@
                 <p><strong>October 2025:</strong> I'm recruiting an undergraduate or graduate student to collaborate on Project “Robots”: AI Social Robots. Apply through the <a href="https://moniotrlab.khoury.northeastern.edu/students-projects/" target="_blank">Mon(IoT)r research group</a> process.</p>
             </div>
             <div class="news-item">
-                <p><strong>June 2025:</strong> Our paper <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/AccentBias.pdf" target="_blank">"It's not a representation of me": Examining Accent Bias and Digital Exclusion in Synthetic AI Voice Services</a> was accepted at ACM FAccT 2025.</p>
+                <p><strong>June 2025:</strong> Our paper <a href="https://sarahgillespie.github.io/AccentBias.pdf" target="_blank">"It's not a representation of me": Examining Accent Bias and Digital Exclusion in Synthetic AI Voice Services</a> was accepted at ACM FAccT 2025.</p>
             </div>
             <div class="news-item">
-                <p><strong>April 2025:</strong> Our paper <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/SocialRobotClaims.pdf" target="_blank"> Promises, Promises: Understanding Claims Made in Social Robot Consumer Experiences</a> was accepted at CHI 2025.</p>
+                <p><strong>April 2025:</strong> Our paper <a href="https://sarahgillespie.github.io/SocialRobotClaims.pdf" target="_blank"> Promises, Promises: Understanding Claims Made in Social Robot Consumer Experiences</a> was accepted at CHI 2025.</p>
             </div>
             <div class="news-item">
-                <p><strong>May 2024:</strong> Presented <a href="https://github.com/SarahGillespie/sarahgillespie.github.io/blob/main/gillespie-conpro24.pdf" target="_blank">Investigating the Datafication of Your Car</a> at IEEE Security 8th Workshop on Technology and Consumer Protection (ConPro '24.)</p>
+                <p><strong>May 2024:</strong> Presented <a href="https://sarahgillespie.github.io/gillespie-conpro24.pdf" target="_blank">Investigating the Datafication of Your Car</a> at IEEE Security 8th Workshop on Technology and Consumer Protection (ConPro '24.)</p>
             </div>
             <div class="news-item">
                 <p><strong>September 2023:</strong> Began my PhD in Computer Science at Northeastern University with the Khoury Distinguished Fellowship.</p>
